--- a/style-flag-American.css
+++ b/style-flag-American.css
@@ -9,11 +9,13 @@ body {
 
 .material-symbols-outlined {
   font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+    'FILL' 1,
+    'wght' 700,
+    'GRAD' 0,
+    'opsz' 48;
+  font-size: 15px !important;
 }
+
 
 #flag-container {
   width: 600px;
@@ -34,12 +36,30 @@ body {
 }
 
 #star-container {
-  width: 30%;
+  color: white;
+  width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
   background-color: #032D61;
+}
+
+.star-row {
+  display: flex;
+  justify-content: center; 
+  gap: 5px; 
+  width: 100%;
+  height: 20px;
+  font-size: 5px;
+}
+.star-row:nth-child(odd) { 
+  justify-content: space-between; 
+}
+
+.star-row:nth-child(even) { 
+  justify-content: space-around;
 }
 
 #line-container {
