--- a/style-flag-American.css
+++ b/style-flag-American.css
@@ -1,94 +1,76 @@
 body {
-  margin: 0;
-  display: flex;
-  width: 100vw;
-  height: 100vh; 
-  justify-content: center;
-  align-items: center;
+  box-shadow:inset 0 0 0 1000px #fff;
+   font-size: 12px;
 }
-
-.material-symbols-outlined {
-  font-variation-settings:
-    'FILL' 1,
-    'wght' 700,
-    'GRAD' 0,
-    'opsz' 48;
-  font-size: 15px !important;
-}
-
 
 #flag-container {
-  width: 600px;
-  height: 300px;
-  display: row;
-  justify-content:space-between;
-  align-items: center;
-  background-color: white;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+   background-image: repeating-linear-gradient(#b22234 0%, #b22234 7.69%, #fff 7.7%, #fff 15.385%);
+   width: 1068px;
+   height: 562px;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-#top-flag {
-  width: 100%;
-  height: 161.538461538px;
-  display: flex;
-  justify-content: space-evenly;
-  background-color: white;
+#blue-section {
+   position: absolute;
+   top: 0;
+   left: 0;
+   box-sizing: border-box;
+   padding-top: 8px;
+   width: 427px;
+   height: 302px;
+   background-color: #002058;
 }
 
-#star-container {
-  color: white;
-  width: 40%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #032D61;
+.row-even, .row-odd {
+   margin-bottom: -1.25rem;
 }
 
-.star-row {
-  display: flex;
-  justify-content: center; 
-  gap: 5px; 
-  width: 100%;
-  height: 20px;
-  font-size: 5px;
-}
-.star-row:nth-child(odd) { 
-  justify-content: space-between; 
+.row-odd {
+   margin-left: 2.3rem;
 }
 
-.star-row:nth-child(even) { 
-  justify-content: space-around;
+.star-shape {
+   --star-color: #fff;
+   margin: 1.1rem;
+   font-size: 10rem;
+   position: relative;
+   display: inline-block;
+   width: 0px;
+   height: 0px;
+   border-right: 1rem solid transparent;
+   border-bottom: 0.7rem solid var(--star-color);
+   border-left: 1rem solid transparent;
+   transform: rotate(35deg);
 }
 
-#line-container {
-  width: 70%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: white;
+.star-shape:before {
+   border-bottom: 0.8rem solid var(--star-color);
+   border-left: 0.3rem solid transparent;
+   border-right: 0.3rem solid transparent;
+   position: absolute;
+   height: 0;
+   width: 0;
+   top: -0.45rem;
+   left: -0.65rem;
+   display: block;
+   content: "";
+   transform: rotate(-35deg);
 }
 
-#bottom-flag {
-  width: 100%;
-  height: 138.461538462px;
-  display: flex;
-  flex-direction: column;
-  gap: 23.0769230769px;
-  background-color: red;  
+.star-shape:after {
+   position: absolute;
+   display: block;
+   top: 0.03rem;
+   left: -1.05rem;
+   width: 0;
+   height: 0;
+   border-right: 1rem solid transparent;
+   border-bottom: 0.7rem solid var(--star-color);
+   border-left: 1rem solid transparent;
+   transform: rotate(-70deg);
+   content: "";
 }
-
-.line {
-  width: 100%;
-  height: 23.0769230769px;
-  background-color: red;
-}
-
-.line-white {
-  width: 100%;
-  height: 23.0769230769px;
-  background-color: rgb(255, 255, 255);
-}
-
